--- a/css/style.css
+++ b/css/style.css
@@ -50,16 +50,11 @@
 main{
     display: flex;
     flex-direction: row;
+    gap: 44px;
+    
 
 }
-article{
 
-    width: 218px;
-    height:968px ;
-
-    max-width: 218px;
-    max-height: 968px;
-}
 ul{
     display: flex;
     flex-direction: column;
@@ -73,9 +68,6 @@ ul{
     gap: 22px;
     margin-top: 24px;
     margin-left: 22px;
-
-
-    
 }
 
 .item-list img, a{
@@ -91,8 +83,49 @@ ul{
 
 }
 
+/* Estilização do grid-layout */
+
+
+
 section{
+    max-width: 1222px;
     display: grid;
-    grid-template-columns: repeat(4, 282px);
-    grid-template-rows: repeat(3, 262);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* grid-template-rows: 1fr 1fr 1fr 1fr; */
+
+    grid-auto-flow: row;
+    grid-gap: 20px
+}
+
+.cell-video {
+    place-self: center; /* Centraliza tanto horizontalmente quanto verticalmente */
+    
+}
+
+.canal-title{
+    display: flex;
+    flex-direction: row;
+
+    gap: 10px;
+}
+
+.canal-title img, h1{
+    
+
+    font-family:sans-serif, "Roboto";
+    font-weight:600;
+    font-size: 14px;
+    
+
+    vertical-align: middle;
+    
+    
+}
+
+
+.cell-video p{
+    white-space: pre-line;
+    font-family: sans-serif "Roboto";
+    font-size: 12px;
+    font-family: 400;
 }
